# neural-network

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mnist.model
src/: main.cpp
src/dataset/: Data.cpp  Data.hpp  MNISTLoader.cpp  MNISTLoader.hpp
src/neural/: Layer.cpp  Layer.hpp  Network.cpp  Network.hpp
